Contact management + inner form to create org

--- a/sis/templates/clients/base_profile.html
+++ b/sis/templates/clients/base_profile.html
@@ -26,10 +26,12 @@
 	    		</div>
 	    		
 				<div class="address">
-					<i class="fa fa-home"></i>
-					<span>{{ address.get_line_1 }}</span><br/>
-					<span>{{ address.get_line_2 }}</span><br/>
-					<span>{{ address.get_line_3 }}</span><br/>
+					<address>
+						<i class="fa fa-home"></i>
+						{{ address.get_line_1 }}<br/>
+						{{ address.get_line_2 }}<br/>
+						{{ address.get_line_3 }}<br/>
+					</address>	
 				</div>
 				
 				
