--- a/sis/templates/base.html
+++ b/sis/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en" ng-app>
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}CookieCutter{% endblock title %}</title>
+    <title>{% block title %}SIS{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -130,7 +130,7 @@
 		<div id="sidebar-left" class="col-xs-2 col-sm-2">
 			<ul class="nav main-menu">
 				<li>
-					<a href="{% url 'client_list' %}" class="active">
+					<a href="{% url 'client_list' %}">
 						<i class="fa fa-users"></i>
 						<span class="hidden-xs">Clients</span>
 					</a>
@@ -146,6 +146,10 @@
 						<i class="fa fa-users"></i>
 						<span class="hidden-xs">Contacts</span>
 					</a>
+					<ul class="dropdown-menu"  style="display:block">
+						<li><a href="{% url 'contact_list' %}">People</a></li>
+						<li><a href="{% url 'org_list' %}">Organizations</a></li>
+					</ul>
 				</li>
 				
 				
