added ClientSetupView with minimal PendForm

--- a/sis/templates/base.html
+++ b/sis/templates/base.html
@@ -196,7 +196,7 @@
 	<!-- Latest JQuery -->
 	<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
 	<script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
-	
+	{% include 'autocomplete_light/static.html' %}
 	<!-- Latest compiled and minified JavaScript -->
 	<!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>-->
 	<script src="{% static 'plugins/bootstrap/bootstrap.min.js' %}"></script>
