--- a/sis/templates/clients/client_profile_contact_edit.html
+++ b/sis/templates/clients/client_profile_contact_edit.html
@@ -1,5 +1,7 @@
 {% extends 'clients/base_profile.html' %}
 
+{% load selectable_tags %}
+{% include_jquery_libs %}
 {% load staticfiles %}
 {% load i18n %}
 
@@ -18,21 +20,9 @@
     <p class="text-danger"><strong>{% trans 'Please correct these errors and save again.' %}</strong></p>
 {% endif %}
                         
-{% crispy address_form %}
-<div  class="form-group">
-    {{ phones_form.management_form }}
-    <label class="control-label col-xs-3">{% trans "Phones" %}</label>
-    <div class="controls col-xs-9">
-        <div class="container-fluid">
-    {% for form in phones_form %}
-        {% crispy form %}
-    {% endfor %}
-    </div>
-    </div>
-</div>
-{% crispy contact_form %}
+{% include "contacts/_contact_info_fields.html" %}
 
-<div class="form-actions pull-right"><!-- col-xs-6 col-xs-offset-3 -->
+<div class="form-actions pull-right">
     <input type="submit" name="save" value="Save changes" class="btn btn-primary" id="submit-id-save" />
     <a class="btn btn-default" href="{% url 'client_profile_contact' pk=object.id %}">Cancel</a>
 </div>
@@ -49,14 +39,9 @@
 
 $(document).ready(function() {
      
+{% include "contacts/_contact_info_js.html" %}
     
-   $(".phone_row").formset({
-            prefix: '{{ phones_form.prefix }}',
-            addText: '<i class="fa fa-plus-circle"></i> {% trans "Add phone" %}',
-            deleteText: '<i class="fa fa-remove"> {% trans "Remove phone" %}'
-        });
-   
-   
+
 });
 
 </script>
