--- a/sis/templates/base.html
+++ b/sis/templates/base.html
@@ -44,6 +44,9 @@
 
   <body>
   {% block body %}
+  {% block divmodal %}
+  {% endblock divmodal %}
+  
   <header class="navbar">
 	<div class="container-fluid expanded-panel">
 		<div class="row">
