--- a/sis/templates/clients/client_profile_referral_edit.html
+++ b/sis/templates/clients/client_profile_referral_edit.html
@@ -5,7 +5,6 @@
 {% load crispy_forms_tags %}
 
 
-
 {% block tab-content %}
 <div id="tab-ident" class="tab-pane active">
 <h4><span>{{ headline }}</h4>
@@ -14,4 +13,9 @@
 {% crispy ref_form %}
 
 </div>
+
 {% endblock tab-content %}
+
+{% block javascript_extra_tab %}
+$('#div_id_ref-contact').hide();
+{% endblock javascript_extra_tab %}
